# yingxin

./: .gitignore  6.13日改动.md  BACKEND_ADMIN_PROMPT.md  CLAUDE.md  CODE_REVIEW.md  CONTEXT.md  DATABASE_HANDOFF.md  DESKTOP_ROUTE_ORIGIN_REPORT.md  FIX_REPORT.md  JWT_REFRESH_TOKEN_REPORT.md  MOBILE_SHEET_3STAGE_REPORT.md  README.md  SCORE_REPORT.md  campus-road-overrides.json  cheek.db  database_dump.sql  docker-compose.yml  xiugairizhi.md  yunwei.md  介绍.txt  迎新系统安全评估报告.docx
backend/: .env.example  alembic.ini  docker-compose.yml  import_excel.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_drop_admin_users.py  0003_agent_pgvector_tables.py  0004_documents_xiaoxin.py  0005_documents_source_kind.py  0006_faq_merge_from_faqs.py  0007_remove_faqs_and_agent_legacy_tables.py  0008_add_clubs_table.py  0009_add_club_owner.py  (+19 more)
backend/app/: __init__.py  main.py
backend/docs/: ADMIN_GUIDE.md  AGENT_AND_XIAOXIN_DUAL_PATH.md  CLUB_ANNOUNCEMENT_API.md  FORUM_ROLE_ACCOUNTS.md  FRONTEND_API.md  XIAOXIN_SSE.md
backend/migrations/: 002_hash_id_number.sql
backend/scripts/: faq_operational_seed.py  faq_sort_order.py  guide_announcement_seed.py  hash_existing_id_numbers.py  init_db.py  manage_student_account.py  seed_faq.sql  seed_forum_posts.py  start_backend.ps1
backend/tests/: conftest.py  test_agent.py  test_announcements.py  test_auth.py  test_clubs.py  test_faq.py  test_forum.py  test_llm_embed.py  test_login_guard.py  test_rate_limit.py  test_security_headers.py  test_students.py  test_xiaoxin_auth.py  test_xiaoxin_links.py
(+244 files in other folders)
