[project]
name = "welcome-backend"
version = "0.1.0"
description = "河南牧业经济学院迎新系统 · 后端"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0,<5",
    "python-multipart>=0.0.17",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "pgvector>=0.3.6",
    "edge-tts>=7.2.8",
    "pypinyin>=0.55.0",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
